--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
       <div class="hidden overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center" id="contact-modal">
       <div class="fixed left-0 top-0 flex h-full w-full items-center justify-center bg-black bg-opacity-50 py-10">
-        <div class="max-h-full w-full max-w-xl overflow-y-auto sm:rounded-2xl bg-white animate-fade-up animate-once animate-duration-500 animate-delay-0 animate-ease-out animate-normal animate-fill-forwards">
-          <div class="w-full">
+        <div class="max-h-full w-full max-w-sm sm:max-w-xl overflow-y-auto rounded-lg sm:rounded-2xl bg-white animate-fade-up animate-once animate-duration-500 animate-delay-0 animate-ease-out animate-normal animate-fill-forwards">
+          <div class="mx-auto w-[300px] sm:w-full">
             <div class="m-8 my-20 max-w-[400px] mx-auto">
               <div class="mb-8">
                 <h1 class="mb-4 text-3xl font-extrabold">To infinity and beyond</h1>
