--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!-- main component -->
 <div class="w-full sm-bg">
-    <div class="flex bg-white bg-opacity-90 sm:bg-opacity-100 h-screen">
+    <div class="flex bg-white bg-opacity-90 lg:bg-opacity-100 h-screen">
         <div class="flex flex-col items-center justify-center text-center lg:text-left px-8 md:px-12 lg:w-1/2">
             <img class="w-60 h-60 rounded-full mx-auto mb-8 border-4" src="/res/me.png" alt="Profile picture">
             <div class="animate-fade-right animate-once animate-duration-1000 animate-delay-0 animate-ease-linear animate-normal animate-fill-backwards">
@@ -40,7 +40,7 @@
                 <p class="mt-2 text-sm text-gray-500 md:text-base">I am a person with work experience that can be taken into consideration for recruitment. Can work in a team, under pressure and target. Familiar with Windows & Linux also Microsoft Office programs. Graduated from high school, experienced in production and administration position. Have an interest in the world of Web Development.</p>
                 <div class="flex justify-center lg:justify-start mt-6">
                     <a class="px-4 py-3 bg-gray-900 text-gray-200 text-xs font-semibold rounded hover:bg-gray-800 uppercase" href="#" onclick="toggleModal('contact-modal')">Hire me</a>
-                    <a class="mx-4 px-4 py-3 bg-gray-300 text-gray-900 text-xs font-semibold rounded hover:bg-gray-400 uppercase" href="#">Know more about me</a>
+                    <a class="mx-4 px-4 py-3 bg-gray-300 text-gray-900 text-xs font-semibold rounded hover:bg-gray-400 uppercase" href="/res/Dede Ahmad Fawzy-resume.pdf" download="Dede Ahmad Fawzy-resume">Get ATS Resume</a>
                 </div>
             </div>
         </div>
@@ -50,6 +50,67 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="flex items-center justify-center flex-col bg-[#E5E5E5] min-h-screen">
+  <p class="mb-16 text-2xl">EXPERIENCE</p>
+  <!-- main card -->
+  <div class="bg-[#F4F5FA] p-10 rounded-xl">
+      <!-- headers content-->
+      <div class="flex flex-col justify-center items-center text-center">
+          <div class="max-w-sm font-bold font-sans">
+              PT. ARJUNA KESATRIA SEJATI
+          </div>
+          <div class="font-light max-w-lg mt-5 text-sm">
+              Property company. I work here since Feb 2019 - Jul 2023
+          </div>
+      </div>
+
+      <!-- subscriptions -->
+      <div
+          class="flex flex-col md:flex-row space-x-0 md:space-x-8 space-y-12  md:space-y-0 justify-center items-center mt-10">
+          <div class="bg-[#FFFBEC] rounded-xl">
+              <div class="flex flex-col p-8 rounded-xl bg-white shadow-xl translate-x-4 translate-y-4 w-96 md:w-auto">
+                  <img src="/res/vlc.png" class="w-20">
+                  <div class="mt-3 font-semibold text-lg">Villa Lestari Cikarang</div>
+                  <div class="text-sm font-light">General Admin & Data entry</div>
+
+                  <button class="bg-[#F4F5FA] px-4 py-3 rounded-full  border border-[#F0F0F6] shadow-xl mt-4" type="button" onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120082020T013','_blank')">
+                      Visit page
+                  </button>
+              </div>
+          </div>
+
+          <div class="bg-[#F9ECFF] rounded-xl">
+              <div class="flex flex-col p-8 rounded-xl bg-white shadow-xl translate-x-4 translate-y-4 w-96 md:w-auto">
+                  <img src="/res/vlc.png" class="w-20">
+                  <div class="mt-3 font-semibold text-lg">Villa Lestari Cikarang 2</div>
+                  <div class="text-sm font-light w-60 md:w-auto">General Admin & Data entry</div>
+
+                  <button class="bg-[#F4F5FA] px-4 py-3 rounded-full  border border-[#F0F0F6] shadow-xl mt-4" type="button" onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120082021T004','_blank')">
+                      Visit page
+                  </button>
+              </div>
+          </div>
+
+
+          <div class="bg-[#ECEEFF] rounded-xl">
+              <div class="flex flex-col p-8 rounded-xl bg-white shadow-xl translate-x-4 translate-y-4 w-96 md:w-auto">
+                <img src="/res/gmi.png" class="w-10">
+                  <div class="mt-3 font-semibold text-lg">Griya Mulya Indah</div>
+                  <div class="text-sm font-light w-60 md:w-auto">General Admin & Data entry</div>   
+
+                  <button class="bg-[#F4F5FA] px-4 py-3 rounded-full  border border-[#F0F0F6] shadow-xl mt-4" type="button" onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120042020T002','_blank')">
+                    Visit page
+                  </button>
+              </div>
+          </div>
+      </div>
+
+      <div class="flex justify-center">
+          <button class="mt-12 bg-slate-900 text-white px-4 rounded-full py-3">Button pemanis</button>
+      </div>
+  </div>
 </div>
 
 </body>
