--- a/index.html
+++ b/index.html
@@ -268,10 +268,6 @@
         </div>
 
         <div
-          class="hidden animate-fade-down animate-once animate-duration-500 animate-delay-0 animate-ease-out animate-normal animate-fill-backwards"
-          id="more-toggle"
-        >
-          <div
             class="flex flex-col justify-center items-center text-center mt-16"
           >
             <div class="max-w-sm font-bold font-sans">
@@ -285,6 +281,30 @@
             </div>
             <div class="font-light max-w-lg mt-5 text-sm">
               Mar 2014 - Jan 2015<br />Helper - Finish Good
+            </div>
+          </div>
+
+        <div
+          class="hidden animate-fade-down animate-once animate-duration-500 animate-delay-0 animate-ease-out animate-normal animate-fill-backwards"
+          id="more-toggle"
+        >
+          <div
+            class="flex flex-col justify-center items-center text-center mt-12 bg-slate-400 rounded-xl p-10"
+          >
+            <div class="max-w-sm font-bold font-sans border-4 rounded-xl px-2">
+              INFORMAL WORK
+            </div>
+            <div class="max-w-lg mt-5 text-sm">
+              <a class="font-bold" href="https://elenoirnft.github.io" target="_blank">ELENOIR</a><p class="font-light">Smart Contract and Website</p>
+            </div>
+            <div class="max-w-lg mt-5 text-sm">
+              <a class="font-bold" href="https://classeemonkee.github.io" target="_blank">ClasseeMonkee</a><p class="font-light">Website</p>
+            </div>
+            <div class="max-w-lg mt-5 text-sm">
+              <a class="font-bold" href="https://skullheadlab.github.io" target="_blank">Skullhead Lab</a><p class="font-light">Smart Contract and Website</p>
+            </div>
+            <div class="max-w-lg mt-5 text-sm">
+              <a class="font-bold" href="https://omnidokkaebi.com" target="_blank">Omni Dokkaebi</a><p class="font-light">Smart Contract and Website</p>
             </div>
           </div>
         </div>
