--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
               >
               <a
                 class="px-4 py-3 bg-gray-300 text-gray-900 text-xs font-semibold rounded hover:bg-gray-400 uppercase"
-                href="/res/Dede Ahmad Fawzy-resume.pdf"
-                download="Dede Ahmad Fawzy-resume"
+                href="https://drive.google.com/file/d/14tTIXKcLHCUVFb1ClL2Ssyw6jeeG0aqB/view?usp=sharing"
                 >Get ATS Resume</a
               >
             </div>
