add some touches

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             class="animate-fade-right animate-once animate-duration-1000 animate-delay-0 animate-ease-linear animate-normal animate-fill-backwards"
           >
             <h2 class="text-3xl font-semibold text-gray-800 md:text-4xl">
-              Dede Ahmad <span class="text-amber-500">Fawzy</span>
+              Dede Ahmad <span class="font-bold bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 text-transparent bg-clip-text animate-gradient">Fawzy</span>
             </h2>
             <p class="mt-2 text-sm text-gray-500 md:text-base">
               I am a profesional, hardworker and experienced person. High school
@@ -182,7 +182,7 @@
     </div>
 
     <div
-      class="flex items-center justify-center flex-col bg-[#E5E5E5] min-h-screen"
+      class="flex items-center justify-center flex-col bg-[#E5E5E5] pb-4 min-h-screen"
     >
       <p class="mb-16 mt-16 text-2xl font-bold">EXPERIENCES</p>
       <!-- main card -->
@@ -290,7 +290,7 @@
           <div
             class="flex flex-col justify-center items-center text-center mt-12 bg-slate-400 rounded-xl p-10"
           >
-            <div class="max-w-sm font-bold font-sans border-4 rounded-xl px-2">
+            <div class="max-w-sm font-bold font-sans border-4 rounded-xl px-2 animate-wiggle animate-once animate-duration-500 animate-delay-500 animate-ease-linear animate-normal animate-fill-forwards">
               INFORMAL WORK
             </div>
             <div class="max-w-lg mt-5 text-sm">
