--- a/index.html
+++ b/index.html
@@ -73,15 +73,43 @@
           class="flex flex-col items-center justify-center text-center lg:text-left px-8 md:px-12 lg:w-1/2"
         >
           <img
-            class="w-60 h-60 rounded-full mx-auto mb-8 border-4 animate-fade-down animate-once animate-duration-1000 animate-delay-0 animate-ease-out animate-normal animate-fill-backwards"
+            class="w-60 h-60 rounded-full mx-auto border-4 animate-fade-down animate-once animate-duration-1000 animate-delay-0 animate-ease-out animate-normal animate-fill-backwards"
             src="/res/me.png"
             alt="Profile picture"
           />
+
+          <div
+            class="my-4 h-auto w-1/2 overflow-hidden flex flex-nowrap text-center"
+            id="slider"
+          >
+            <div
+              class="text-white flex-none w-full flex items-center justify-center"
+            >
+              <p class="bg-black p-1">👶Born on November 16th 1995</p>
+            </div>
+            <div
+              class="text-white flex-none w-full flex items-center justify-center"
+            >
+              <p class="bg-black p-1">
+                🏙️Live in Sukamahi, Central Cikarang District
+              </p>
+            </div>
+            <div
+              class="text-white flex-none w-full flex items-center justify-center"
+            >
+              <p class="bg-black p-1">🎼Love Japanese Music</p>
+            </div>
+          </div>
+
           <div
             class="animate-fade-right animate-once animate-duration-1000 animate-delay-0 animate-ease-linear animate-normal animate-fill-backwards"
           >
             <h2 class="text-3xl font-semibold text-gray-800 md:text-4xl">
-              Dede Ahmad <span class="font-bold bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 text-transparent bg-clip-text animate-gradient">Fawzy</span>
+              Dede Ahmad
+              <span
+                class="font-bold bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 text-transparent bg-clip-text animate-gradient"
+                >Fawzy</span
+              >
             </h2>
             <p class="mt-2 text-sm text-gray-500 md:text-base">
               I am a profesional, hardworker and experienced person. High school
@@ -89,7 +117,9 @@
               programs. Have an interest in the world of Web Development and I’m
               looking forward to work with you.
             </p>
-            <div class="flex justify-center lg:justify-start mt-6 space-x-2 sm:space-x-4">
+            <div
+              class="flex justify-center lg:justify-start mt-6 space-x-2 sm:space-x-4"
+            >
               <a
                 class="px-4 py-3 bg-gray-900 text-gray-200 text-xs font-semibold rounded hover:bg-gray-800 uppercase"
                 href="#"
@@ -184,7 +214,9 @@
     <div
       class="flex items-center justify-center flex-col bg-[#E5E5E5] pb-4 min-h-screen"
     >
-      <p class="mb-16 mt-16 text-2xl font-bold">EXPERIENCES</p>
+      <p class="mb-16 mt-16 text-2xl font-bold bg-black text-white py-1 px-2">
+        EXPERIENCES
+      </p>
       <!-- main card -->
       <div class="bg-[#F4F5FA] p-10 rounded-xl max-w-sm sm:max-w-full">
         <!-- headers content-->
@@ -267,43 +299,69 @@
         </div>
 
         <div
-            class="flex flex-col justify-center items-center text-center mt-16"
-          >
-            <div class="max-w-sm font-bold font-sans">
-              PT. ENERGI INDOGAS NUSANTARA<br />Industrial Gases Specialist
-            </div>
-            <div class="font-light max-w-lg mt-5 text-sm">
-              Jan 2015 - Aug 2016<br />Warehouse Admin
-            </div>
-            <div class="max-w-sm font-bold font-sans mt-10">
-              PT. INDOFOOD CBP SUKSES MAKMUR Tbk.<br />Noodle Division
-            </div>
-            <div class="font-light max-w-lg mt-5 text-sm">
-              Mar 2014 - Jan 2015<br />Helper - Finish Good
-            </div>
+          class="flex flex-col justify-center items-center text-center mt-16"
+        >
+          <div class="max-w-sm font-bold font-sans">
+            PT. ENERGI INDOGAS NUSANTARA<br />Industrial Gases Specialist
           </div>
+          <div class="font-light max-w-lg mt-5 text-sm">
+            Jan 2015 - Aug 2016<br />Warehouse Admin
+          </div>
+          <div class="max-w-sm font-bold font-sans mt-10">
+            PT. INDOFOOD CBP SUKSES MAKMUR Tbk.<br />Noodle Division
+          </div>
+          <div class="font-light max-w-lg mt-5 text-sm">
+            Mar 2014 - Jan 2015<br />Helper - Finish Good
+          </div>
+        </div>
 
         <div
           class="hidden animate-fade-down animate-once animate-duration-500 animate-delay-0 animate-ease-out animate-normal animate-fill-backwards"
           id="more-toggle"
         >
           <div
-            class="flex flex-col justify-center items-center text-center mt-12 bg-slate-400 rounded-xl p-10"
+            class="flex flex-col justify-center items-center text-center mt-12 bg-slate-200 rounded-xl p-10"
           >
-            <div class="max-w-sm font-bold font-sans border-4 rounded-xl px-2 animate-wiggle animate-once animate-duration-500 animate-delay-500 animate-ease-linear animate-normal animate-fill-forwards">
+            <div
+              class="max-w-sm font-bold font-sans bg-white px-2 animate-wiggle animate-once animate-duration-500 animate-delay-500 animate-ease-linear animate-normal animate-fill-forwards"
+            >
               INFORMAL WORK
             </div>
             <div class="max-w-lg mt-5 text-sm">
-              <a class="font-bold" href="https://elenoirnft.github.io" target="_blank">ELENOIR</a><p class="font-light">Smart Contract and Website</p>
+              <a
+                class="font-bold"
+                href="https://elenoirnft.github.io"
+                target="_blank"
+                >ELENOIR</a
+              >
+              <p class="font-light">Smart Contract and WebApp</p>
             </div>
             <div class="max-w-lg mt-5 text-sm">
-              <a class="font-bold" href="https://classeemonkee.github.io" target="_blank">ClasseeMonkee</a><p class="font-light">Website</p>
+              <a
+                class="font-bold"
+                href="https://classeemonkee.github.io"
+                target="_blank"
+                >ClasseeMonkee</a
+              >
+              <p class="font-light">Website</p>
             </div>
             <div class="max-w-lg mt-5 text-sm">
-              <a class="font-bold" href="https://skullheadlab.github.io" target="_blank">Skullhead Lab</a><p class="font-light">Smart Contract and Website</p>
+              <a
+                class="font-bold"
+                href="https://skullheadlab.github.io"
+                target="_blank"
+                >Skullhead Lab</a
+              >
+              <p class="font-light">Smart Contract and WebApp</p>
             </div>
             <div class="max-w-lg mt-5 text-sm">
-              <a class="font-bold" href="https://omnidokkaebi.com" target="_blank">Omni Dokkaebi</a><p class="font-light">Smart Contract and Website</p>
+              <a
+                class="font-bold"
+                href="https://omnidokkaebi.com"
+                target="_blank"
+                >Omni Dokkaebi</a
+              >
+              <p class="font-light">Smart Contract and WebApp</p>
             </div>
           </div>
         </div>
@@ -326,5 +384,21 @@
       document.getElementById(modalID).classList.toggle("flex");
       document.getElementById(modalID + "-backdrop").classList.toggle("flex");
     }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const slider = document.querySelector("#slider");
+      setTimeout(function moveSlide() {
+        const max = slider.scrollWidth - slider.clientWidth;
+        const left = slider.clientWidth;
+
+        if (max === slider.scrollLeft) {
+          slider.scrollTo({ left: 0, behavior: "smooth" });
+        } else {
+          slider.scrollBy({ left, behavior: "smooth" });
+        }
+
+        setTimeout(moveSlide, 2000);
+      }, 2000);
+    });
   </script>
 </html>
