--- a/index.html
+++ b/index.html
@@ -70,36 +70,13 @@
     <div class="w-full sm-bg">
       <div class="flex bg-white bg-opacity-90 lg:bg-opacity-100 h-screen">
         <div
-          class="flex flex-col items-center justify-center text-center lg:text-left px-8 md:px-12 lg:w-1/2"
+          class="flex flex-col items-center justify-center text-left px-8 md:px-12 lg:w-1/2"
         >
           <img
             class="w-60 h-60 rounded-full mx-auto border-4 animate-fade-down animate-once animate-duration-1000 animate-delay-0 animate-ease-out animate-normal animate-fill-backwards"
             src="/res/me.png"
             alt="Profile picture"
           />
-
-          <div
-            class="my-4 h-auto w-1/2 overflow-hidden flex flex-nowrap text-center"
-            id="slider"
-          >
-            <div
-              class="text-white flex-none w-full flex items-center justify-center"
-            >
-              <p class="bg-black p-1">👶Born on November 16th 1995</p>
-            </div>
-            <div
-              class="text-white flex-none w-full flex items-center justify-center"
-            >
-              <p class="bg-black p-1">
-                🏙️Live in Sukamahi, Central Cikarang District
-              </p>
-            </div>
-            <div
-              class="text-white flex-none w-full flex items-center justify-center"
-            >
-              <p class="bg-black p-1">🎼Love Japanese Music</p>
-            </div>
-          </div>
 
           <div
             class="animate-fade-right animate-once animate-duration-1000 animate-delay-0 animate-ease-linear animate-normal animate-fill-backwards"
@@ -111,11 +88,34 @@
                 >Fawzy</span
               >
             </h2>
-            <p class="mt-2 text-sm text-gray-500 md:text-base">
-              I am a profesional, hardworker and experienced person. High school
-              graduated. Familiar with Windows & Linux also Microsoft Office
-              programs. Have an interest in the world of Web Development and I’m
-              looking forward to work with you.
+
+            <div class="text-left font-semibold">
+              I am
+              <div
+                class="relative inline-grid grid-cols-1 grid-rows-1 gap-12 overflow-hidden"
+              >
+                <span
+                  class="animate-word col-span-full row-span-full"
+                  id="result"
+                ></span>
+                <span class="animate-word-delay-1 col-span-full row-span-full"
+                  >Living in Sukamahi</span
+                >
+                <span class="animate-word-delay-2 col-span-full row-span-full"
+                  >Profesional</span
+                >
+                <span class="animate-word-delay-3 col-span-full row-span-full"
+                  >Hardworker</span
+                >
+                <span class="animate-word-delay-4 col-span-full row-span-full"
+                  >Experienced</span
+                >
+              </div>
+            </div>
+            <p class="text-sm text-gray-500 md:text-base">
+              High school graduated. Familiar with Windows & Linux also
+              Microsoft Office programs. Have an interest in the world of Web
+              Development and I’m looking forward to work with you.
             </p>
             <div
               class="flex justify-center lg:justify-start mt-6 space-x-2 sm:space-x-4"
@@ -334,7 +334,7 @@
                 target="_blank"
                 >ELENOIR</a
               >
-              <p class="font-light">Smart Contract and WebApp</p>
+              <p class="font-light">Smart Contract and Web3 App</p>
             </div>
             <div class="max-w-lg mt-5 text-sm">
               <a
@@ -352,7 +352,7 @@
                 target="_blank"
                 >Skullhead Lab</a
               >
-              <p class="font-light">Smart Contract and WebApp</p>
+              <p class="font-light">Smart Contract and Web3 App</p>
             </div>
             <div class="max-w-lg mt-5 text-sm">
               <a
@@ -361,7 +361,7 @@
                 target="_blank"
                 >Omni Dokkaebi</a
               >
-              <p class="font-light">Smart Contract and WebApp</p>
+              <p class="font-light">Smart Contract and Web3 App</p>
             </div>
           </div>
         </div>
@@ -385,20 +385,25 @@
       document.getElementById(modalID + "-backdrop").classList.toggle("flex");
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const slider = document.querySelector("#slider");
-      setTimeout(function moveSlide() {
-        const max = slider.scrollWidth - slider.clientWidth;
-        const left = slider.clientWidth;
+    window.onload = function ageCalculator() {
+      var dob = new Date("11/16/1995");
+      {
+        //calculate month difference from current date in time
+        var month_diff = Date.now() - dob.getTime();
 
-        if (max === slider.scrollLeft) {
-          slider.scrollTo({ left: 0, behavior: "smooth" });
-        } else {
-          slider.scrollBy({ left, behavior: "smooth" });
-        }
+        //convert the calculated difference in date format
+        var age_dt = new Date(month_diff);
 
-        setTimeout(moveSlide, 2000);
-      }, 2000);
-    });
+        //extract year from date
+        var year = age_dt.getUTCFullYear();
+
+        //now calculate the age of the user
+        var age = Math.abs(year - 1970);
+
+        //display the calculated age
+        return (document.getElementById("result").innerHTML =
+          age + " Years old");
+      }
+    };
   </script>
 </html>
