--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             <div class="text-left font-semibold">
               I am
               <div
-                class="relative inline-grid grid-cols-1 grid-rows-1 gap-12 overflow-hidden"
+                class="relative bg-black text-white px-2 inline-grid grid-cols-1 grid-rows-1 gap-12 overflow-hidden"
               >
                 <span
                   class="animate-word col-span-full row-span-full"
                   id="result"
                 ></span>
                 <span class="animate-word-delay-1 col-span-full row-span-full"
-                  >Living in Sukamahi</span
+                  >Groot🪵</span
                 >
                 <span class="animate-word-delay-2 col-span-full row-span-full"
                   >Profesional</span
