update some string

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <a
                 class="px-4 py-3 bg-gray-300 text-gray-900 text-xs font-semibold rounded hover:bg-gray-400 uppercase"
                 href="https://drive.google.com/file/d/14tTIXKcLHCUVFb1ClL2Ssyw6jeeG0aqB/view?usp=sharing"
-                >Get ATS Resume</a
+                >Get Resume</a
               >
             </div>
             <div class="flex justify-center lg:justify-start mt-6 space-x-2">
