--- a/property/index.html
+++ b/property/index.html
@@ -30,6 +30,9 @@
           15 menit menuju Pusat Pemerintahan Kab. Bekasi.</p>
           <div class="justify-between">
             <button onclick="location.href='https://wa.me/6289613709370'" class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md">Hubungi Admin</button>
+            <button onclick="window.open('https://maps.app.goo.gl/uryoChmfRAZiJSNCA','_blank')" class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer">Google Map
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24"><path fill="#ffffff" d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
+            </button>
           </div>
         </div>
         <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
