--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   </head>
   <body>
     <!-- modal component-->
-    <div class="fixed left-0 top-0 flex h-auto w-full justify-center items-start mt-6 z-50" id="popup-modal">
-    <div 
+    <div
+      class="fixed left-0 top-0 flex h-auto w-full justify-center items-start mt-6 z-50"
+      id="popup-modal"
+    >
+      <div
         class="w-full max-w-3xl flex flex-col md:flex-row items-start md:items-center justify-between gap-8 bg-slate-600 p-5 rounded-xl animate-fade-up animate-once animate-duration-500 animate-delay-0 animate-ease-out animate-normal animate-fill-forwards"
       >
-      
         <div>
-          <h4 class="text-white font-bold text-base">Info:</h4>
           <p class="text-white text-xs mt-2 md:mt-1">
-            Are you looking for a subsidized house with a cheap down payment and installments of less than 1.5 million rupiah?
+            Are you looking for a subsidized house with a cheap down payment and
+            installments of less than 1.5 million rupiah?
           </p>
         </div>
         <div class="flex">
@@ -36,7 +38,7 @@
           </button>
         </div>
       </div>
-      </div>
+    </div>
 
     <div
       class="hidden overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center"
@@ -141,7 +143,11 @@
               </div>
             </div>
             <p class="text-sm text-gray-500 md:text-base">
-              Dedicated and accomplished professional with years of experience in my respective industry. Committed to continuous learning and professional growth, I strive to bring my expertise to a dynamic and forward-thinking team. Let's connect and explore how we can collaborate for mutual success.
+              Dedicated and accomplished professional with years of experience
+              in my respective industry. Committed to continuous learning and
+              professional growth, I strive to bring my expertise to a dynamic
+              and forward-thinking team. Let's connect and explore how we can
+              collaborate for mutual success.
             </p>
             <div
               class="flex justify-center lg:justify-start mt-6 space-x-2 sm:space-x-4"
