--- a/property/index.html
+++ b/property/index.html
@@ -8,73 +8,238 @@
     <title>Dede Fawzy</title>
   </head>
   <body class="bg-gray-900">
-
-<section class="text-gray-400 body-font">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-col">
-      <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
-        <h1 class="sm:w-2/5 text-white font-medium title-font text-2xl mb-2 sm:mb-0">Tentukan rumah impianmu sekarang</h1>
-        <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Terdapat promo menarik di perumahan tertentu, tanyakan pada admin ada promo apa saja yang tersedia ya!</p>
-      </div>
-    </div>
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
-      <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-        <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src="./bci-k/1.jpg">
-        </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">Perum Bukit Cijingga Indah KOMERSIL</h2>
-        <p class="text-base leading-relaxed mt-2">Booking 3jt DP 8jt<br/>
-          Fasilitas:
-          5 menit menuju Kawasan Hyundai.
-          10 menit ke Mall Lippo Cikarang.
-          15 menit menuju Pusat Pemerintahan Kab. Bekasi.</p>
-          <div class="justify-between">
-            <button onclick="location.href='https://wa.me/6289613709370'" class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md">Hubungi Admin</button>
-            <button onclick="window.open('https://maps.app.goo.gl/uryoChmfRAZiJSNCA','_blank')" class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer">Google Map
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24"><path fill="#ffffff" d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
-            </button>
+    <section class="text-gray-400 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col">
+          <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
+            <h1
+              class="sm:w-2/5 text-white font-medium title-font text-2xl mb-2 sm:mb-0"
+            >
+              Tentukan rumah impianmu sekarang
+            </h1>
+            <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">
+              Terdapat promo menarik di perumahan tertentu, tanyakan pada admin
+              ada promo apa saja yang tersedia ya!
+            </p>
           </div>
         </div>
-        <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-          <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" src="./ci/1.jpg">
-          </div>
-          <h2 class="text-xl font-medium title-font text-white mt-5">Perum Cibenda Indah SUBSIDI</h2>
-          <p class="text-base leading-relaxed mt-2">Booking 1jt DP 6jt<br/>
-            Fasilitas:
-            15 menit menuju Kawasan Deltamas
-            15 menit menuju Pusat Pemerintahan Kab Bekasi
-            15 menit menuju GT Cikarang Pusat</p>
+        <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6 hover:scale-105 transform transition">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="./bci-k/1.jpg"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-white mt-5">
+              Bukit Cijingga Indah KOMERSIL
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Booking 3jt DP 8jt<br />
+              Fasilitas: 5 menit menuju Kawasan Hyundai. 10 menit ke Mall Lippo
+              Cikarang. 15 menit menuju Pusat Pemerintahan Kab. Bekasi.
+            </p>
             <div class="justify-between">
-            <button onclick="location.href='https://wa.me/6289613709370'" class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md">Hubungi Admin</button>
-            <button onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120022020T004','_blank')" class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer">Halaman SiKumbang
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24"><path fill="#ffffff" d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
-            </button>
+              <button
+                onclick="location.href='https://wa.me/6289613709370'"
+                class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md"
+              >
+                Hubungi Admin
+              </button>
+              <button
+                onclick="window.open('https://maps.app.goo.gl/uryoChmfRAZiJSNCA','_blank')"
+                class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer"
+              >
+                Google Maps
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24">
+                  <path
+                    fill="#ffffff"
+                    d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-          <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" src="./gmi/1.jpg">
-          </div>
-          <h2 class="text-xl font-medium title-font text-white mt-5">Perum Griya Mulya Indah</h2>
-          <p class="text-base leading-relaxed mt-2">Booking 1jt DP 5.750.000<br/>
-            Fasilitas:
-            10 menit menuju GT Japek 2.
-            10 menit menuju Kawasan MM2100.
-            15 menit menuju Mall Lippo Cikarang.
-            20 menit menuju Meikarta.
-            25 menit menuju Pusat Pemerintahan Kab Bekasi.
-            15 menit menuju RS Siloam.</p>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6 hover:scale-105 transform transition">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="./ci/1.jpg"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-white mt-5">
+              Cibenda Indah SUBSIDI
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Booking 1jt DP 6jt<br />
+              Fasilitas: 15 menit menuju Kawasan Deltamas. 15 menit menuju Pusat
+              Pemerintahan Kab Bekasi. 15 menit menuju GT Cikarang Pusat.
+            </p>
             <div class="justify-between">
-              <button onclick="location.href='https://wa.me/6289613709370'" class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md">Hubungi Admin</button>
-              <button onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120042020T002','_blank')" class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer">Halaman SiKumbang
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24"><path fill="#ffffff" d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
+              <button
+                onclick="location.href='https://wa.me/6289613709370'"
+                class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md"
+              >
+                Hubungi Admin
+              </button>
+              <button
+                onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120022020T004','_blank')"
+                class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer"
+              >
+                Halaman SiKumbang
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24">
+                  <path
+                    fill="#ffffff"
+                    d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6 hover:scale-105 transform transition">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="./gmi/1.jpg"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-white mt-5">
+              Griya Mulya Indah SUBSIDI
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Booking 1jt DP 5.750.000<br />
+              Fasilitas: 10 menit menuju GT Japek 2. 10 menit menuju Kawasan
+              MM2100. 15 menit menuju Mall Lippo Cikarang. 20 menit menuju
+              Meikarta. 25 menit menuju Pusat Pemerintahan Kab Bekasi. 15 menit
+              menuju RS Siloam.
+            </p>
+            <div class="justify-between">
+              <button
+                onclick="location.href='https://wa.me/6289613709370'"
+                class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md"
+              >
+                Hubungi Admin
+              </button>
+              <button
+                onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR2120042024T003','_blank')"
+                class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer"
+              >
+                Halaman SiKumbang
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24">
+                  <path
+                    fill="#ffffff"
+                    d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6 hover:scale-105 transform transition">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="./tkr/1.jpg"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-white mt-5">
+              Taman Kertamukti Residence SUBSIDI
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Blok B: Booking 1jt DP 7jt<br />Blok F dan G: Booking 1jt DP
+              4jt<br />
+              Failitas: 20 menit ke stasiun KA/KRL Cibitung. 20 menit menuju
+              pusat perbelanjaan SGC.
+            </p>
+            <div class="justify-between">
+              <button
+                onclick="location.href='https://wa.me/6289613709370'"
+                class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md"
+              >
+                Hubungi Admin
+              </button>
+              <button
+                onclick="window.open('https://sikumbang.tapera.go.id/lokasi-perumahan/CKR0720032023T002','_blank')"
+                class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer"
+              >
+                Halaman SiKumbang
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24">
+                  <path
+                    fill="#ffffff"
+                    d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6 hover:scale-105 transform transition">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="./wcc/1.png"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-white mt-5">
+              Wonderful Cikarang City KOMERSIL
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Booking 3jt DP 0%<br />
+              Fasilitas: 5 menit menuju GT Japek 2. 10 menit menuju kawasan
+              Hyundai dan EJIP. 15 menit menuju Mall Lippo Cikarang. 20 menit
+              menuju Meikarta. 20 menit menuju pusat pemerintahan Kab Bekasi.
+            </p>
+            <div class="justify-between">
+              <button
+                onclick="location.href='https://wa.me/6289613709370'"
+                class="bg-gradient-to-r from-orange-600 via-purple-600 to-sky-400 animate-gradient text-center text-white p-2 rounded-md"
+              >
+                Hubungi Admin
+              </button>
+              <button
+                onclick="window.open('https://maps.app.goo.gl/j6xUxjvs8gJsCchC7','_blank')"
+                class="bg-slate-600 p-2 rounded-md text-white inline-flex items-center mt-3 cursor-pointer"
+              >
+                Google Maps
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24">
+                  <path
+                    fill="#ffffff"
+                    d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"
+                  />
+                </svg>
               </button>
             </div>
           </div>
         </div>
       </div>
-  </section>
-
+    </section>
+    <div class="relative">
+      <button
+        class="z-20 text-white flex flex-col shrink-0 grow-0 justify-around fixed bottom-0 right-5 rounded-lg mr-1 mb-5 lg:mr-5 lg:mb-5 xl:mr-10 xl:mb-10"
+        onclick="location.href='/'"
+      >
+        <div class="p-3 rounded-full border-4 bg-white">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            viewBox="0 0 24 24"
+          >
+            <g data-name="60.User">
+              <path
+                fill="#000000"
+                d="M12 12a4 4 0 1 1 4-4 4 4 0 0 1-4 4zm0-6a2 2 0 1 0 2 2 2 2 0 0 0-2-2zM18.9 21.166l-1.972-.332a5 5 0 1 0-9.862 0l-1.966.332a7 7 0 1 1 13.806 0z"
+              />
+              <path
+                d="M12 24a12 12 0 1 1 12-12 12.013 12.013 0 0 1-12 12zm0-22a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2z"
+              />
+            </g>
+          </svg>
+        </div>
+      </button>
+    </div>
   </body>
 </html>
